# rust-app-using-ai

./: .env.example  .gitignore  Cargo.toml  README.md  app-plan.txt  ecosystem.config.js
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs
backend/src/utils/: mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  lib.rs
frontend/src/services/: api.rs
frontend/src/styles/: main.scss
scripts/: build.sh  deploy.sh  test.sh
shared/: Cargo.toml
shared/src/: lib.rs
